# WAYEngine

./: CMakeLists.txt  README.md
include/: engine.h  material.h  mesh.h  renderObject.h  renderSystem.h  renderer.h  shader.h  texture.h
include/glad/: glad.h
src/: engine.cpp  frag.frag  glad.c  main.cpp  material.cpp  mesh.cpp  renderObject.cpp  renderSystem.cpp  renderer.cpp  texture.cpp  vert.vert
